Json reader for website

--- a/VIA_WEB1_Assignment2_Gruppe6/Projekter.html
+++ b/VIA_WEB1_Assignment2_Gruppe6/Projekter.html
@@ -104,6 +104,27 @@
     </div>
   </section>
 
+  <section>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Project type</th>
+          <th scope="col">Manhours used</th>
+          <th scope="col">Est. price</th>
+          <th scope="col">Est. total hours</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td id="project-type"></td>
+          <td id="expectedHours"></td>
+          <td id="estimatedPrice"></td>
+          <td class="estimatedTotalHours"></td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+
   <!-- FOOTER -->
   <div class="footer">
     <div class="footer-container">
@@ -169,7 +190,55 @@
     </div>
     <p class="copyright">Copyright &copy; 2023. All rights reserved.</p>
   </div>
+
   <script src="./js/bootstrap.js"></script>
+
+  <script>
+    fetch('../project_data.json')
+      .then(response => response.json())
+      .then(allProjects => {
+        const ongoingProjects = allProjects.filter(project => project.completed === "False");
+
+        const projectsContainer = document.querySelector('.projects-container');
+        const tableBody = document.querySelector('.table tbody');
+
+        projectsContainer.innerHTML = '';
+        tableBody.innerHTML = '';
+
+        const createProjectDivHTML = (project, imagePath) => `
+            <div class="individual-project">
+                <img class="project-img" src="${imagePath}" alt="Project Image" />
+                <div class="textbox">
+                    <div>
+                        <div>projectType: ${project.projectType}</div>
+                        <div>manHoursUsed: ${project.hoursSpent}</div>
+                        <div>expectedPrice: ${project.price.toLocaleString('en-US', { style: 'currency', currency: 'USD' })}</div>
+                        <div>estimatedHoursTotal: ${project.timeline}</div>
+                    </div>
+                </div>
+            </div>
+        `;
+
+        const createTableRowHTML = (project, index) => `
+            <tr>
+                <td>${project.projectType}</td>
+                <td>${project.hoursSpent}</td>
+                <td>${project.price.toLocaleString('en-US', { style: 'currency', currency: 'USD' })}</td>
+                <td>${project.timeline}</td>
+            </tr>
+        `;
+
+        ongoingProjects.slice(0, 3).forEach((project, index) => {
+          const imagePath = `Images/fabriksbyggeri${index + 1}cropped.png`;
+          projectsContainer.innerHTML += createProjectDivHTML(project, imagePath);
+        });
+
+        ongoingProjects.slice(3).forEach((project, index) => {
+          tableBody.innerHTML += createTableRowHTML(project, index + 3);
+        });
+      })
+      .catch(error => console.error('Error:', error));
+  </script>
 </body>
 
 </html>
