--- a/VIA_WEB1_Assignment2_Gruppe6/Services.html
+++ b/VIA_WEB1_Assignment2_Gruppe6/Services.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="./CSS/main.css" />
   <link rel="stylesheet" href="./CSS/576px.css" />
   <link rel="stylesheet" href="./CSS/960px.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -266,6 +267,7 @@
     <p class="copyright">Copyright &copy; 2023. All rights reserved.</p>
   </div>
   <script src="./js/bootstrap.js"></script>
+  <script src="./js/services.js"></script>
 </body>
 
 </html>
