--- a/VIA_WEB1_Assignment2_Gruppe6/Projekter.html
+++ b/VIA_WEB1_Assignment2_Gruppe6/Projekter.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -17,9 +18,9 @@
       <!-- MENU -->
       <div class="d-none d-md-flex navbar-menu">
         <a href="hjem.html" class="nav-link-desktop">Hjem</a>
-        <a href="Services.html" class="nav-link-desktop">Services</a>
-        <a href="Portfolio.html" class="nav-link-desktop">Portfolio</a>
-        <a href="Projekter.html" class="nav-link-desktop active-page">Vores Projekter</a>
+        <a href="services.html" class="nav-link-desktop">Services</a>
+        <a href="portfolio.html" class="nav-link-desktop">Portfolio</a>
+        <a href="projekter.html" class="nav-link-desktop active-page">Vores Projekter</a>
         <a href="kontakt.html" class="nav-link-desktop">Kontakt</a>
       </div>
     </div>
@@ -47,13 +48,13 @@
             <a class="nav-link" href="hjem.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Services.html">Services</a>
+            <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Portfolio.html">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Projekter.html">Vores Projekter</a>
+            <a class="nav-link active" aria-current="page" href="projekter.html">Vores Projekter</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="kontakt.html">Kontakt</a>
@@ -66,9 +67,9 @@
   <section>
     <div class="container">
       <h1 class="container-title">Igangværende projekter</h1>
-      <div class="projects-container">
+      <div class="projects-container ongoing-projects-container">
         <div class="individual-project">
-          <img class="project-img" src="Images/fabriksbyggeri1cropped.png" alt="Project Image" />
+          <img class="project-img" src="Images/industrial1cropped.png" alt="Project Image" />
           <div class="textbox">
             <div>
               <div>Project type: XXXXXXXX</div>
@@ -79,7 +80,7 @@
           </div>
         </div>
         <div class="individual-project">
-          <img class="project-img" src="Images/fabriksbyggeri2cropped.png" alt="Project Image" />
+          <img class="project-img" src="Images/industrial2cropped.png" alt="Project Image" />
           <div class="textbox">
             <div>
               <div>projectType: XXXXXXXX</div>
@@ -90,7 +91,7 @@
           </div>
         </div>
         <div class="individual-project">
-          <img class="project-img" src="Images/fabriksbyggeri3cropped.png" alt="Project Image" />
+          <img class="project-img" src="Images/industrial3cropped.png" alt="Project Image" />
           <div class="textbox">
             <div>
               <div>projectType: XXXXXXXX</div>
@@ -117,11 +118,7 @@
       </thead>
       <tbody>
         <tr>
-          <td id="project-name"></td>
-          <td id="project-type"></td>
-          <td id="expectedHours"></td>
-          <td id="estimatedPrice"></td>
-          <td id="estimatedTotalHours"></td>
+          <!-- Display the elements here -->
         </tr>
       </tbody>
     </table>
