--- a/VIA_WEB1_Assignment2_Gruppe6/hjem.html
+++ b/VIA_WEB1_Assignment2_Gruppe6/hjem.html
@@ -17,9 +17,9 @@
       <!-- MENU -->
       <div class="d-none d-md-flex navbar-menu">
         <a href="hjem.html" class="nav-link-desktop active-page">Hjem</a>
-        <a href="Services.html" class="nav-link-desktop">Services</a>
-        <a href="Portfolio.html" class="nav-link-desktop">Portfolio</a>
-        <a href="Projekter.html" class="nav-link-desktop">Vores Projekter</a>
+        <a href="services.html" class="nav-link-desktop">Services</a>
+        <a href="portfolio.html" class="nav-link-desktop">Portfolio</a>
+        <a href="projekter.html" class="nav-link-desktop">Vores Projekter</a>
         <a href="kontakt.html" class="nav-link-desktop">Kontakt</a>
       </div>
     </div>
@@ -47,13 +47,13 @@
             <a class="nav-link" href="hjem.html">Hjem</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Services.html">Services</a>
+            <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Portfolio.html">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Projekter.html">Vores Projekter</a>
+            <a class="nav-link" href="projekter.html">Vores Projekter</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="kontakt.html">Kontakt</a>
