Added a default image

--- a/VIA_WEB1_Assignment2_Gruppe6/Portfolio.html
+++ b/VIA_WEB1_Assignment2_Gruppe6/Portfolio.html
@@ -125,6 +125,8 @@
     </table>
   </section>
 
+  <div class="error-container"></div>
+
   <!-- FOOTER -->
   <div class="footer">
     <div class="footer-container">
