--- a/VIA_WEB1_Assignment2_Gruppe6/Projekter.html
+++ b/VIA_WEB1_Assignment2_Gruppe6/Projekter.html
@@ -124,6 +124,8 @@
     </table>
   </section>
 
+  <div class="error-container"></div>
+
   <!-- FOOTER -->
   <div class="footer">
     <div class="footer-container">
